--- a/saml/callme-saml/src/main/resources/templates/index.html
+++ b/saml/callme-saml/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
-    <title>SAML 2.0 Login/Logout</title>
+    <title>SAML 2.0 Login</title>
     <meta charset="utf-8" />
     <style>
         span,
@@ -16,36 +16,25 @@
 </head>
 
 <body>
-<div class="container">
-    <ul class="nav">
-        <li class="nav-item">
-            <form th:action="@{/logout}" method="post">
-                <button class="btn btn-primary" id="rp_logout_button" type="submit">
-                    Logout
-                </button>
-            </form>
-        </li>
-    </ul>
-</div>
-<main role="main" class="container">
-    <h1 class="mt-5">2.0 Login/Logout with Spring Security</h1>
-    <p class="lead">You are successfully logged in as <span sec:authentication="name"></span></p>
-    <h2 class="mt-2">User Identity Attributes</h2>
-    <table class='table table-striped'>
-        <thead>
-        <tr>
-            <th>Attribute</th>
-            <th>Value</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="userAttribute : ${userAttributes}">
-            <th th:text="${userAttribute.key}"></th>
-            <td th:text="${userAttribute.value}"></td>
-        </tr>
-        </tbody>
-    </table>
-</main>
+    <main role="main" class="container">
+        <h1 class="mt-5">SAML 2.0 Login with Spring Security</h1>
+        <p class="lead">You are successfully logged in as <span sec:authentication="name"></span></p>
+        <h2 class="mt-2">User Identity Attributes</h2>
+        <table class='table table-striped'>
+            <thead>
+            <tr>
+                <th>Attribute</th>
+                <th>Value</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="userAttribute : ${userAttributes}">
+                <th th:text="${userAttribute.key}"></th>
+                <td th:text="${userAttribute.value}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </main>
 </body>
 
 </html>
